--- a/thankyou.html
+++ b/thankyou.html
@@ -6,8 +6,8 @@
     <title></title>
   </head>
   <body>
-    <h1>Thank You for Signing Up!</h1>
-    <h2>We'll reach out to you soon.</h2>
+    <h1>Thank You for Contacting!</h1>
+    <h2>Got your message! Will reach out to you soon.</h2>
 
   </body>
 </html>
